SAK-30128 Profile 2 create worksite ui overflow issue

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -1478,7 +1478,6 @@ main-profile-tabpanel .tab-row a:visited.active,
 /* create worksite panel */
 .create-worksite-panel {
 	width: 500px;
-	height: 250px;
 	padding: 5px;
 	margin-left: auto;
 	margin-right: auto;
